--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,22 +29,25 @@ header div{
     z-index: 1;
     border: solid 1px gold;
 }
+header div nav a{
+    text-decoration: none;
+    color: black;
+}
 #logo{
     width: 212px;
-    position: absolute;
 }
 header nav {
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin: 60px 0px 60px 170px;
+    margin: auto;
 }
 
 button {
     border-radius: 10px;
-    padding: 5px;
+    padding: 7px;
+    margin: 0px 5px;
     background-color: #d7d3d3b8;
     box-shadow: 8px 5px 7px #3e3b3bb8;
 }
@@ -147,6 +150,11 @@ footer a{
     flex-wrap: wrap;
     align-items: center;
 }
+.page-2 .box{
+    box-shadow: 1px 2px 10px 0px #daa5204a;
+    border-radius: 15px;
+    border: solid gold 1px;
+}
 .page-2 section{
     display: flex;
     flex-direction: row;
@@ -158,7 +166,6 @@ footer a{
     flex-wrap: wrap;
     align-items: center;
     width: 46%;
-    border: black 1px solid;
     margin: 10px auto;
 }
 
@@ -244,47 +251,72 @@ footer a{
 
 
 /*-----------page-5---------*/
+.page-5 h2{
+    text-align: center;
+}
+.border{
+    border: solid gold 1px;
+    box-shadow: 1px 2px 3px 0px #daa5204a;
+    width: 80%;
+    margin: 30px auto;
+    z-index: -1;
+    background-color: lightgrey;
+}
 
-.slider_focus{
-    max-width: 800px;
-    margin: 2rem auto
-}   
-    
-.slider_focus ul{
+.page-5 .container {
+    margin: auto;
+    margin-bottom: 10px;
+    width: 500px;
+    height: 500px;
     display: flex;
-    position: relative;
-    list-style-type: none;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border: solid black 1px;
-}
-
-.slider_focus ul li a img{
-    width: 80px;
-    height: 80px;
-    flex: 1;
-    padding: .5rem;
-}
-
-.slider_focus ul li span img{
-    position: fixed;
-    top: 160px;
-    bottom: 0;
-    left: -100%;
-    opacity: 0;
-    transition: all .6s;
+    justify-content: center;
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+                0 9px 46px 8px rgba(0, 0, 0, 0.12), 
+                0 11px 15px -7px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
 }
 
-.slider_focus ul li:focus-within span img{
-    left: 100px;
-    opacity: 1
+.page-5 .container img {
+    width: 100%;
+    border-radius: 15px;
 }
 
-.page-5 a:hover {
-    opacity: 0.5;
+.page-5 button {
+    height: 10%;
+    border: none;
+    outline: none;
+    background: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    padding: 1em;
+    display: flex;
+    z-index: 1;
 }
 
+.page-5 button .arrow {
+    border: solid #fff;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 10px;
+    transition: transform 0.3s ease-out;
+    outline: none;
+}
+
+#right-btn {
+    margin: auto 0 auto -2em;
+}
+
+#right-btn .arrow {
+    transform: rotate(-45deg);
+}
+
+#left-btn {
+    z-index: 0;
+    margin: auto -2em auto 0;
+}
+
+#left-btn .arrow {
+    transform: rotate(135deg);
+}
 /*-----------page-6---------*/
 
 .page-6 section{
@@ -293,7 +325,8 @@ footer a{
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 30px 0px;
-    border: solid;
+    border: solid gold 2px;
+    border-radius: 15px;
 }
 
 
