--- a/assets/style/css/styleAlbum.css
+++ b/assets/style/css/styleAlbum.css
@@ -32,7 +32,11 @@
 }
 
 @media only screen and (max-width : 650px) {
+    #gallery{
+        width: 100%;
+    }
     .j-gallery{
         height: 60vh!important;
+        margin: 5px;
     }
   }
